--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&display=swap');
 
 :root {
-  /*
-    Colors
-    Neutral
-  */
+  /*Colors*/
   --dark-blue-DM: hsl(209, 23%, 22%); /*DM = Dark Mode*/
   --very-dark-blue-DM: hsl(207, 26%, 17%);
   --very-dark-blue: hsl(200, 15%, 8%);
@@ -16,4 +13,26 @@
   --homepage-font-size: 14px;
   --detail-font-size: 16px;
   font-family: 'Nunito Sans', sans-serif;
+
+  /*Layout*/
+  --lr-padding: 20px;
+  --tb-padding: 30px
+}
+
+* {
+  box-sizing: content-box;
+}
+
+html, body, #root {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  margin: 0;
+}
+
+h1 {
+  margin: 0;
+  padding: 0;
 }
