--- a/src/components/filterAndSearchForm/styles.css
+++ b/src/components/filterAndSearchForm/styles.css
@@ -1,9 +1,17 @@
-.filter-by-region {
+.dark-mode {
   background-color: var(--dark-blue-DM);
+  color: var(--very-Light-Gray);
+}
+
+.light-mode {
+  background-color: var(--very-Light-Gray);
+  color: var(--dark-greay);
+}
+
+.filter-by-region {
   border-color: transparent;
   border-radius: 5px;
   border-right-width: 20px;
-  color: var(--very-Light-Gray);
   padding: 15px 0 15px 20px;
   width: 50%;
 }
@@ -13,6 +21,10 @@
   flex-direction: column;
   gap: 40px;
   padding: var(--lr-padding);
+}
+
+.form-filter-search input.light-mode {
+  border-left: transparent;
 }
 
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
@@ -29,18 +41,30 @@
 }
 
 .search-country {
+  box-shadow: 0px 10px 10px -5px rgba(0,0,0,0.1);
   display: flex;
   gap: 0;
 }
 
-.search-country > * {
+.search-country.dark-mode > * {
   background-color: var(--dark-blue-DM);
+  color: var(--very-Light-Gray);
   border: transparent;
+}
+
+.search-country.light-mode > * {
+  background-color: var(--white);
+  border-color: transparent;
+  color: var(--dark-greay);
 }
 
 .search-country button {
   border-radius: 5px 0 0 5px;
   padding-left: 30px;
+}
+
+.search-country button.light-mode {
+  border-right: transparent;
 }
 
 .search-country input {
