--- a/src/components/countriesGrid/styles.css
+++ b/src/components/countriesGrid/styles.css
@@ -1,4 +1,5 @@
 .countries-container {
+  box-sizing: border-box;
   display: grid;
   gap: 40px;
   height: 100%;
@@ -7,7 +8,7 @@
   list-style: none;
   margin: 0;
   max-width: 1440px;
-  padding: var(--tb-padding) 0 0 0;
+  padding: var(--tb-padding) clamp(1rem, -0.23rem + 5.246vw, 6rem) 0 clamp(1rem, -0.23rem + 5.246vw, 6rem);
   width: 100%;
 }
 
