--- a/src/components/filterForm/styles.css
+++ b/src/components/filterForm/styles.css
@@ -12,13 +12,26 @@
   border-color: transparent;
   border-radius: 5px;
   border-right-width: 20px;
+  box-sizing: border-box;
+  height: 100%;
   padding: 15px 0 15px 20px;
-  width: 50%;
-  border-color: transparent;
+  width: 100%;
+  max-width: 250px;
 }
 
 .filter-by-region.light-mode {
   box-shadow: 0px 10px 10px -5px rgba(0,0,0,0.1);
   background-color: var(--white);
   color: var(--dark-blue-DM);
+}
+
+form {
+  width: 100%;
+}
+
+@media (min-width: 450px) {
+  form {
+    display: flex;
+    justify-content: right;
+  }
 }
