--- a/src/components/searchForm/styles.css
+++ b/src/components/searchForm/styles.css
@@ -8,11 +8,12 @@
   color: var(--dark-greay);
 }
 
-
 .search-country {
   box-shadow: 0px 10px 10px -5px rgba(0,0,0,0.1);
   display: flex;
   gap: 0;
+  width: 100%;
+  max-width: 500px;
 }
 
 .search-country.dark-mode > * {
