--- a/src/index.css
+++ b/src/index.css
@@ -15,17 +15,16 @@
   font-family: 'Nunito Sans', sans-serif;
 
   /*Layout*/
-  --lr-padding: 20px;
+  --lr-padding: clamp(1rem, -0.23rem + 5.246vw, 6rem);
   --tb-padding: 30px
 }
 
 * {
   box-sizing: content-box;
 }
-
 html, body, #root {
-  min-width: 100%;
-  min-height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 body {
