--- a/src/components/countryCard/styles.css
+++ b/src/components/countryCard/styles.css
@@ -3,6 +3,11 @@
   padding-bottom: var(--tb-padding);
 }
 
+.country-card a {
+  color: inherit;
+  text-decoration: none;
+}
+
 .country-card.dark-mode {
   background-color: var(--dark-blue-DM);
   color: var(--very-Light-Gray);
@@ -14,7 +19,7 @@
   box-shadow: 0px 10px 10px -5px rgba(0,0,0,0.1);
 }
 
-.country-card > img {
+.country-card a > img {
   border-radius: 5px;
   height: 180px;
   object-fit: cover;
