--- a/src/components/countryModal/styles.css
+++ b/src/components/countryModal/styles.css
@@ -1,3 +1,26 @@
+.back-button {
+  align-items: center;
+  border: transparent;
+  border-radius: 5px;
+  box-shadow: 0px 10px 10px -5px rgba(0,0,0,0.5);
+  display: flex;
+  gap: 10px;
+  margin: 0 var(--lr-padding);
+  padding: 10px 25px;
+}
+
+.back-button a {
+  text-decoration: none;
+}
+
+.back-button.dark-mode > a {
+  color: var(--white)
+}
+
+.back-button.light-mode > a {
+  color: var(--very-dark-blue)
+}
+
 .country-modal-container {
   box-sizing: border-box;
   border-radius: 5px;
