--- a/src/components/countryModal/styles.css
+++ b/src/components/countryModal/styles.css
@@ -1,11 +1,9 @@
-.back-button {
+.back-button, .countries-button {
   align-items: center;
   border: transparent;
-  border-radius: 5px;
+  border-radius: 2px;
   box-shadow: 0px 10px 10px -5px rgba(0,0,0,0.5);
-  display: flex;
-  gap: 10px;
-  margin: 0 var(--lr-padding);
+  margin: 40px calc(var(--lr-padding) + 10px );
   padding: 10px 25px;
 }
 
@@ -21,25 +19,63 @@
   color: var(--very-dark-blue)
 }
 
-.country-modal-container {
+
+.countries-border-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  width: 100%;
+}
+
+.countries-border-container button {
+  box-shadow: 0px 10px 10px -5px rgba(0,0,0,0.1);
+  font-size: 10px;
+  margin: 0;
+  padding: 5px 25px;
+}
+
+.country-modal-container, .country-modal-flag {
   box-sizing: border-box;
   border-radius: 5px;
   display: flex;
   justify-content: center;
-  padding: var(--lr-padding);
+  padding: 10px calc(var(--lr-padding) + 10px );
   width: 100%;
-  color: var(--white);
+  color: var(--very-Light-Gray);
 }
 
-.country-modal-wrapper > img {
+.country-modal-flag > img {
+  height: 250px;
   border-radius: 5px;
   object-fit: cover;
   width: 100%;
 }
 
+.country-modal-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
 .country-modal-wrapper .country-name {
   font-size: 24px;
   font-weight: 900;
+}
+
+.country-modal-container ul {
+  padding: 0;
+}
+
+.country-modal-container ul li{
+  list-style: none;
+}
+
+.display-in-line p, .display-in-line ul, .display-in-line li{
+  display: inline;
+}
+
+.display-in-line {
+  margin: 16px 0;
 }
 
 .country-modal-container.dark-mode {
