--- a/src/components/countryModal/border-button.css
+++ b/src/components/countryModal/border-button.css
@@ -6,6 +6,16 @@
   padding: 10px 25px;
 }
 
+.countries-button.dark-mode {
+  background-color: var(--dark-blue-DM);
+}
+
+.countries-button.light-mode {
+  background-color: var(--very-Light-Gray);
+  color: var(--very-dark-blue);
+  box-shadow: 0px 10px 10px -5px rgba(0,0,0,0.1);
+}
+
 .countries-border-container {
   display: flex;
   flex-wrap: wrap;
@@ -18,4 +28,16 @@
   font-size: 10px;
   margin: 0;
   padding: 5px 25px;
+}
+
+@media (min-width: 1000px) {
+  .border-countries {
+    align-items: center;
+    display: flex;
+    gap: 15px;
+  }
+
+  .border-countries > header {
+    min-width: max-content;
+  }
 }
