--- a/src/components/countryModal/styles.css
+++ b/src/components/countryModal/styles.css
@@ -1,23 +1,28 @@
 .back-button {
   align-items: center;
-  display: flex;
-  gap: 10px;
-}
-
-.back-button {
   border: transparent;
   border-radius: 2px;
   box-shadow: 0px 10px 10px -5px rgba(0,0,0,0.5);
-  margin: 40px calc(var(--lr-padding) + 10px );
+  display: flex;
+  gap: 10px;
   padding: 10px 25px;
 }
 
-.country-modal-card {
-  display: flex;
-  flex-direction: column;
+.back-button.dark-mode {
+  background-color: var(--dark-blue-DM);
 }
 
-.back-button a {
+.back-button.light-mode {
+  background-color: var(--very-Light-Gray);
+  box-shadow: 0px 10px 10px -5px rgba(0,0,0,0.1);
+  color: var(--very-dark-blue)
+}
+
+.back-button:hover {
+  cursor: pointer;
+}
+
+a {
   text-decoration: none;
 }
 
@@ -26,7 +31,11 @@
 }
 
 .back-button.light-mode > a {
-  color: var(--very-dark-blue)
+  color: var(--very-dark-blue);
+}
+
+.country-modal-card {
+  display: grid;
 }
 
 .country-modal-container {
@@ -35,7 +44,15 @@
   flex-direction: column;
   padding: 10px calc(var(--lr-padding) + 10px );
   width: 100%;
+}
+
+.country-modal-container.dark-mode {
+  background-color: var(--very-dark-blue-DM);
   color: var(--very-Light-Gray);
+}
+
+.country-modal-container.light-mode {
+  color: var(--very-dark-blue);
 }
 
 .country-modal-flag {
@@ -45,44 +62,10 @@
 }
 
 .country-modal-flag > img {
-  max-height: 250px;
   border-radius: 5px;
-  object-fit: cover;
+  max-height: 250px;
+  object-fit: contain;
   width: 100%;
-}
-
-
-@media (min-width: 550px) {
-
-  .country-modal-flag {
-    padding-right: 0;
-    width: 100%;
-    align-self: center;
-  }
-
-  .country-modal-flag > img {
-    height: auto;
-    border-radius: 5px;
-    object-fit: cover;
-    width: 100%;
-  }
-
-  .country-modal-card {
-    flex-direction: row;
-    gap: 15px;
-  }
-
-  .country-modal-container {
-    padding-left: 0;
-  }
-
-}
-
-
-
-.country-name {
-  font-size: 24px;
-  font-weight: 900;
 }
 
 .country-modal-container ul {
@@ -95,13 +78,42 @@
 
 
 
-.country-modal-container.dark-mode {
-  background-color: var(--dark-blue-DM);
-  color: var(--very-Light-Gray);
+
+
+.country-name {
+  font-size: 24px;
+  font-weight: 900;
 }
 
-.country-modal-container.light-mode {
-  background-color: var(--white);
-  color: var(--very-dark-blue);
-  box-shadow: 0px 10px 10px -5px rgba(0,0,0,0.1);
+.link-back-button {
+  display: block;
+  margin: 40px calc(var(--lr-padding) + 10px );
+  width: min-content;
+}
+
+@media (min-width: 550px) {
+  .country-modal-card {
+    grid-template-columns: 1fr 1fr;
+    gap: clamp(1.25rem, -0.714rem + 5.238vw, 4rem);
+  }
+
+  .country-modal-container {
+    padding-top: 0;
+    padding-left: 0;
+    align-self: center;
+  }
+
+  .country-modal-flag {
+    align-self: center;
+    justify-self: center;
+    padding-right: 0;
+  }
+
+  .country-modal-flag > img {
+    max-height: 400px;
+  }
+
+  .country-name {
+    margin-top: 0;
+  }
 }
