--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 .App {
+  display: flex;
+  flex-direction: column;
   min-height: 100%;
   min-width: 100%;
 }
@@ -13,4 +15,8 @@
 
 main {
   position: relative;
+}
+
+.App main {
+  flex-grow: 1;
 }
